# Simple-Weather-App-API

./: .gitignore  README.md  pyproject.toml
app/: db_models.py  main.py  services.py
app/config/: user_config.py
app/db/: db_management.py  db_models.py
app/models/: models.py  user_models.py  utility_models.py  weather_models.py
app/resolvers/: user_resolvers.py  weather_resolvers.py
app/schemas/: input_schemas.py  utility_schemas.py  weather_schemas.py
app/services/: services.py
tests/: test_query.py  test_services.py
